fixed dropdown; still some work to fix alignment of change-tracker form

--- a/css/main.css
+++ b/css/main.css
@@ -1,28 +1,22 @@
 /* Stuff related to the autocomplete dropdown */
-/*.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
 #select_box {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 10000;
 }
-
 #select_box a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
-
 #select_box a:hover {
   background-color: #f1f1f1
 }
-*//*------------------*/
+/*------------------*/
 
 #dateField, #commentField {
   display: none; /* initially hidden */
@@ -43,8 +37,7 @@
   padding: 3px;
   background-color: #eee;
 }
-/*
 .tracker {
-  margin-top: 20px    ;
+  margin-bottom: 25px;
+  margin-top: 10px;
 }
-*/
